--- a/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
+++ b/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
@@ -74,7 +74,7 @@
     }
 
     CustomStringFilter.prototype = {
-        render: <span class="kwd">function</span> (popup, filter) {
+        render: <span class="kwd">function</span> (grid, popup, filter) {
             <span class="kwd">var</span> lang = $.fn.mvcgrid.lang.Text;
 
             popup.html(
@@ -158,7 +158,7 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
         }
 
         CustomStringFilter.prototype = {
-            render: function (popup, filter) {
+            render: function (grid, popup, filter) {
                 var lang = $.fn.mvcgrid.lang.Text;
 
                 popup.html(
