--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -158,7 +158,7 @@
     <script src="/Scripts/JQuery/jquery.UI.block.js"></script>
     <script src="/Scripts/Bootstrap/bootstrap.min.js"></script>
     <script src="/Scripts/JQueryUI/jquery-ui.min.js"></script>
-    <script src="/Scripts/MvcGrid/mvc-grid.min.js"></script>
+    <script src="/Scripts/MvcGrid/mvc-grid.js"></script>
     <script src="/Scripts/Shared/site.js"></script>
     @RenderSection("scripts", false)
 </body>
