Consistent html attribute quote usage
- Fixed, raw css references using single quotes for it's attributes,
then all the other ones are using double quotes.

--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="Grid controls for ASP.NET MVC projects.">
     <title>@ViewBag.Title</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <link href="/Content/JQueryUI/jquery-ui.css" rel="stylesheet">
     <link href="/Content/Bootstrap/bootstrap.css" rel="stylesheet">
