--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -25,7 +25,7 @@
             </p>
             <pre>&lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet" /&gt;</pre>
             <p>
-                Include grid scripts jQuery scripts been included.
+                Include grid scripts after jQuery scripts.
             </p>
             <pre>&lt;script src="~/Scripts/MvcGrid/mvc-grid.js" /&gt;</pre>
             <p>
