--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         @Html.ActionLink("Grid multi filtering", "MultiFiltering", "Grid")
                     </li>
                     <li>
+                        @Html.ActionLink("Grid global search", "GlobalSearch", "Grid")
+                    </li>
+                    <li>
                         @Html.ActionLink("Grid filtering", "Filtering", "Grid")
                     </li>
                     <li>
