--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -203,3 +203,11 @@ pre {
 .mvc-grid-sort {
     vertical-align: middle;
 }
+
+.grid-search {   
+    background-color: rgba(255, 255, 255, 0.7);
+    margin-left: 15px;
+    text-align: center;
+    color: #000000;
+    border: none;
+}
