--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -19,7 +19,9 @@
             <p>
                 Register mvc grid at start up
             </p>
-            <pre>services.AddMvcGrid();</pre>
+            <pre>using NonFactors.Mvc.Grid;
+
+services.AddMvcGrid();</pre>
             <p>
                 Include grid styling sheet, they can be found at {Username}/.dnx/packages/NonFactors.Grid.Mvc6.
             </p>
