Custom grid partial example
- Added custom grid partial example.

--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -116,6 +116,10 @@ body {
         border: 0 none;
     }
 
+    .table > tbody > tr > td {
+        vertical-align: middle;
+    }
+
 .docs .widget-header {
     background: rgba(54, 52, 52, 0.67);
 }
