--- a/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
@@ -79,6 +79,8 @@
                 <div class="widget-content">
 <pre>
 <code>
+@@using NonFactors.Mvc.Grid;
+
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
 
 @@(Html
@@ -114,6 +116,8 @@
                 <div class="widget-content">
 <pre>
 <code>
+@@using NonFactors.Mvc.Grid;
+
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
 
 @@(Html
