--- a/src/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
@@ -78,6 +78,8 @@
                 <div class="widget-content">
 <pre>
 <code>
+@@using NonFactors.Mvc.Grid;
+
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
 
 @@(Html
@@ -112,6 +114,8 @@
                 <div class="widget-content">
 <pre>
 <code>
+@@using NonFactors.Mvc.Grid;
+
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
 
 @@(Html
