Shared partial installation
- Added shared grid partial installation notes, to avoid hard to analyze
bugs then installing a grid.

--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -17,6 +17,10 @@
             </p>
             <pre>> Install-Package NonFactors.Grid.Mvc6</pre>
             <p>
+                Included grid partial views to your Views/Shared folder, they can be found at {Username}/.dnx/packages/NonFactors.Grid.Mvc6.
+            </p>
+            <pre></pre>
+            <p>
                 Register mvc grid at start up
             </p>
             <pre>using NonFactors.Mvc.Grid;
