--- a/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
+++ b/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
         <div class="example-code content-block">
             <div class="widget">
                 <div class="widget-header">
@@ -50,6 +50,39 @@
         filters.Unregister(<span class="kwd">typeof</span>(<span class="cls">String</span>),<span class="str">"EndsWith"</span>, <span class="kwd">typeof</span>(<span class="cls">StringEndsWithFilter</span><>));
     });
 }
+</code>
+</pre>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="example-code content-block">
+            <div class="widget">
+                <div class="widget-header">
+                    <i class="fa fa-code"></i>
+                    View
+                    <span class="widget-buttons">
+                        <i class="content-toggle"></i>
+                    </span>
+                </div>
+                <div class="widget-content">
+<pre>
+<code>
+@@using NonFactors.Mvc.Grid;
+
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+
+@@(Html
+    .Grid(Model)
+    .Build(columns =>
+    {
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
+    })
+    .Filterable()
+)
 </code>
 </pre>
                 </div>
