--- a/src/Mvc.Grid.Web/Views/Grid/Paging.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Paging.cshtml
@@ -28,7 +28,7 @@
                 .Pageable(pager =>
                 {
                     pager.PagesToDisplay = 3;
-                    pager.InitialPage = 2;
+                    pager.CurrentPage = 2;
                     pager.RowsPerPage = 2;
                 })
             )
@@ -65,7 +65,7 @@
     .Pageable(pager =>
     {
         pager.PagesToDisplay = 3;
-        pager.InitialPage = 2;
+        pager.CurrentPage = 2;
         pager.RowsPerPage = 2;
     })
 )
