--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                         @Html.ActionLink("Pager rows per page", "RowsPerPage", "Pager")
                     </li>
                     <li>
-                        @Html.ActionLink("Pager initial page", "InitialPage", "Pager")
+                        @Html.ActionLink("Pager initial page", "CurrentPage", "Pager")
                     </li>
                 </ul>
             </div>
