--- a/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
+++ b/src/Mvc.Grid.Web/Views/Filter/Unregister.cshtml
@@ -130,39 +130,41 @@
         },
 
         init: <span class="kwd">function</span> (grid, column, popup) {
-            this.bindType(grid, column, popup);
-            this.bindValue(grid, column, popup);
-            this.bindApply(grid, column, popup);
-            this.bindCancel(grid, column, popup);
-        },
-        bindType: <span class="kwd">function</span> (grid, column, popup) {
-            <span class="kwd">var</span> type = popup.find(<span class="str">'.first-filter .mvc-grid-type'</span>);
-            type.bind(<span class="str">'change.mvcgrid'</span>, <span class="kwd">function</span> () {
-                column.filter.first.type = this.value;
-            });
-            type.change();
+            <span class="kwd">this</span>.bindValue(grid, column, popup);
+            <span class="kwd">this</span>.bindApply(grid, column, popup);
+            <span class="kwd">this</span>.bindCancel(grid, column, popup);
         },
         bindValue: <span class="kwd">function</span> (grid, column, popup) {
-            <span class="kwd">var</span> value = popup.find(<span class="str">'.first-filter .mvc-grid-input'</span>);
-            value.bind(<span class="str">'keyup.mvcgrid'</span>, <span class="kwd">function</span> (e) {
-                column.filter.first.val = this.value;
-                <span class="kwd">if</span> (e.keyCode == 13) {
+            <span class="kwd">var</span> inputs = popup.find(<span class="str">'.mvc-grid-input'</span>);
+            inputs.on(<span class="str">'keyup.mvcgrid'</span>, <span class="kwd">function</span> (e) {
+                <span class="kwd">if</span> (e.which == 13) {
                     popup.find(<span class="str">'.mvc-grid-apply'</span>).click();
                 }
             });
         },
         bindApply: <span class="kwd">function</span> (grid, column, popup) {
             <span class="kwd">var</span> apply = popup.find(<span class="str">'.mvc-grid-apply'</span>);
-            apply.bind(<span class="str">'click.mvcgrid'</span>, <span class="kwd">function</span> () {
+            apply.on(<span class="str">'click.mvcgrid'</span>, <span class="kwd">function</span> () {
                 popup.removeClass(<span class="str">'open'</span>);
-                grid.reload(grid, grid.formFilterQuery(grid, column));
+                column.filter.operator = popup.find(<span class="str">'.mvc-grid-operator'</span>).val();
+                column.filter.first.type = popup.find(<span class="str">'.first-filter .mvc-grid-type'</span>).val();
+                column.filter.first.val = popup.find(<span class="str">'.first-filter .mvc-grid-input'</span>).val();
+                column.filter.second.type = popup.find(<span class="str">'.second-filter .mvc-grid-type'</span>).val();
+                column.filter.second.val = popup.find(<span class="str">'.second-filter .mvc-grid-input'</span>).val();
+
+                grid.applyFilter(grid, column);
+                grid.reload(grid);
             });
         },
         bindCancel: <span class="kwd">function</span> (grid, column, popup) {
             <span class="kwd">var</span> cancel = popup.find(<span class="str">'.mvc-grid-cancel'</span>);
-            cancel.bind(<span class="str">'click.mvcgrid'</span>, <span class="kwd">function</span> () {
+            cancel.on(<span class="str">'click.mvcgrid'</span>, <span class="kwd">function</span> () {
                 popup.removeClass(<span class="str">'open'</span>);
-                grid.reload(grid, grid.formFilterQueryWithout(grid, column));
+
+                if (column.filter.first.type) {
+                    grid.cancelFilter(grid, column);
+                    grid.reload(grid);
+                }
             });
         }
     };
@@ -214,39 +216,41 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
             },
 
             init: function (grid, column, popup) {
-                this.bindType(grid, column, popup);
                 this.bindValue(grid, column, popup);
                 this.bindApply(grid, column, popup);
                 this.bindCancel(grid, column, popup);
             },
-            bindType: function (grid, column, popup) {
-                var type = popup.find('.first-filter .mvc-grid-type');
-                type.bind('change.mvcgrid', function () {
-                    column.filter.first.type = this.value;
-                });
-                type.change();
-            },
             bindValue: function (grid, column, popup) {
-                var value = popup.find('.first-filter .mvc-grid-input');
-                value.bind('keyup.mvcgrid', function (e) {
-                    column.filter.first.val = this.value;
-                    if (e.keyCode == 13) {
+                var inputs = popup.find('.mvc-grid-input');
+                inputs.on('keyup.mvcgrid', function (e) {
+                    if (e.which == 13) {
                         popup.find('.mvc-grid-apply').click();
                     }
                 });
             },
             bindApply: function (grid, column, popup) {
                 var apply = popup.find('.mvc-grid-apply');
-                apply.bind('click.mvcgrid', function () {
+                apply.on('click.mvcgrid', function () {
                     popup.removeClass('open');
-                    grid.reload(grid, grid.formFilterQuery(grid, column));
+                    column.filter.operator = popup.find('.mvc-grid-operator').val();
+                    column.filter.first.type = popup.find('.first-filter .mvc-grid-type').val();
+                    column.filter.first.val = popup.find('.first-filter .mvc-grid-input').val();
+                    column.filter.second.type = popup.find('.second-filter .mvc-grid-type').val();
+                    column.filter.second.val = popup.find('.second-filter .mvc-grid-input').val();
+
+                    grid.applyFilter(grid, column);
+                    grid.reload(grid);
                 });
             },
             bindCancel: function (grid, column, popup) {
                 var cancel = popup.find('.mvc-grid-cancel');
-                cancel.bind('click.mvcgrid', function () {
+                cancel.on('click.mvcgrid', function () {
                     popup.removeClass('open');
-                    grid.reload(grid, grid.formFilterQueryWithout(grid, column));
+
+                    if (column.filter.first.type || column.filter.second.type) {
+                        grid.cancelFilter(grid, column);
+                        grid.reload(grid);
+                    }
                 });
             }
         };
