--- a/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
@@ -68,7 +68,7 @@
 &lt;script&gt;
     $(document).on(<span class="str">'keyup'</span>, <span class="str">'.grid-search'</span>, <span class="kwd">function</span>() {
         <span class="kwd">var</span> grid = $(<span class="str">'.mvc-grid'</span>).data(<span class="str">'mvc-grid'</span>);
-        grid.gridQuery = <span class="str">'search='</span> + <span class="kwd">this</span>.value; <span class="com">// Reset page, filter and sort with new filter.</span>
+        grid.query = <span class="str">'search='</span> + <span class="kwd">this</span>.value; <span class="com">// Reset page, filter and sort with new filter.</span>
 
         $(<span class="str">'.mvc-grid'</span>).mvcgrid({
             reload: <span class="kwd">true</span>
@@ -122,7 +122,7 @@
 <script>
     $(document).on('keyup', '.grid-search', function () {
         var grid = $('.mvc-grid').data('mvc-grid');
-        grid.gridQuery = 'search=' + this.value;
+        grid.query = 'search=' + this.value;
 
         $('.mvc-grid').mvcgrid({
             reload: true
