--- a/src/Mvc.Grid.Web/Views/Grid/_NestedPersonGrid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/_NestedPersonGrid.cshtml
@@ -3,7 +3,7 @@
 @model IGrid<PersonModel>
 
 <div class="mvc-grid" data-name="@Model.Name">
-    <table class="table mvc-grid-table @Model.CssClasses">
+    <table class="table @Model.CssClasses">
         <thead>
             <tr>
                 <th></th>
@@ -12,9 +12,9 @@
                     String filterableClass = column.IsFilterable == true ? "filterable" : null;
                     String sortableClass = column.IsSortable == true ? "sortable" : null;
 
-                    <th class="mvc-grid-header @filterableClass @sortableClass @column.CssClasses"
+                    <th class="@filterableClass @sortableClass @column.CssClasses"
                         data-name="@column.Name"
-                        data-filterable="@column.IsFilterable"
+                        data-filter="@column.IsFilterable"
                         data-filter-name="@column.FilterName"
                         data-filter-multi="@column.IsMultiFilterable"
                         data-filter-first-type="@column.Filter?.First?.Type"
@@ -22,7 +22,7 @@
                         data-filter-operator="@column.Filter?.Operator"
                         data-filter-second-type="@column.Filter?.Second?.Type"
                         data-filter-second-val="@column.Filter?.Second?.Value"
-                        data-sortable="@column.IsSortable"
+                        data-sort="@column.IsSortable"
                         data-sort-order="@column.SortOrder"
                         data-sort-first="@column.FirstSortOrder">
                         <span class="mvc-grid-header-title">@column.Title</span>
@@ -44,7 +44,7 @@
             {
                 foreach (IGridRow<PersonModel> row in Model.Rows)
                 {
-                    <tr class="mvc-grid-row @row.CssClasses">
+                    <tr class="@row.CssClasses">
                         <td>Parent</td>
                         @foreach (IGridColumn column in Model.Columns)
                         {
@@ -55,7 +55,7 @@
                     @for (int i = 0; i < row.Model.Children.Count; i++)
                     {
                         GridRow<PersonModel> child = new GridRow<PersonModel>(row.Model.Children[i]);
-                        <tr class="mvc-grid-row row-child">
+                        <tr class="row-child">
                             @if (i == 0)
                             {
                                 <td rowspan="@row.Model.Children.Count">Children</td>
@@ -71,7 +71,7 @@
             else
             {
                 <tr>
-                    <td class="mvc-grid-table-empty" colspan="@Model.Columns.Count()">
+                    <td class="mvc-grid-empty" colspan="@Model.Columns.Count()">
                         @Model.EmptyText
                     </td>
                 </tr>
