--- a/src/Mvc.Grid.Web/Views/Pager/CurrentPage.cshtml
+++ b/src/Mvc.Grid.Web/Views/Pager/CurrentPage.cshtml
@@ -27,7 +27,7 @@
                 })
                 .Pageable(pager =>
                 {
-                    pager.InitialPage = 2;
+                    pager.CurrentPage = 2;
                     pager.RowsPerPage = 2;
                 })
             )
@@ -65,7 +65,7 @@
     })
     .Pageable(pager =>
     {
-        pager.InitialPage = 2;
+        pager.CurrentPage = 2;
         pager.RowsPerPage = 2;
     })
 )
