--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -17,7 +17,7 @@
             </p>
             <pre>> Install-Package NonFactors.Grid.Mvc6</pre>
             <p>
-                Included grid partial views to your Views/Shared folder, they can be found at {Username}/.nuget/packages/NonFactors.Grid.Mvc6.
+                Included grid partial views to your Views/Shared folder, they can be found at ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content.
             </p>
             <pre></pre>
             <p>
@@ -27,7 +27,7 @@
 
 services.AddMvcGrid();</pre>
             <p>
-                Include grid styling sheet, they can be found at {Username}/.nuget/packages/NonFactors.Grid.Mvc6.
+                Include grid styling sheet, they can be found at ~/.nuget/packages/NonFactors.Grid.Mvc6/{version}/content.
             </p>
             <pre>&lt;link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet" /&gt;</pre>
             <p>
