Selectable rows per page
- Added selectable rows per page example.

--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -181,7 +181,7 @@ pre {
 }
 
 .pagination {
-    margin-bottom: 0;
+    margin-bottom: -12px;
 }
 
     .pagination > li > span,
@@ -206,4 +206,12 @@ pre {
     text-align: center;
     color: #000000;
     border: none;
+}
+
+.rows-per-page {
+    display: inline-block;
+}
+
+.rows-per-page select {
+    height: 33px;
 }
