--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -123,6 +123,9 @@
             <div class="sidebar content-block">
                 <ul>
                     <li>
+                        @Html.ActionLink("Pager selectable rows per page", "SelectableRowsPerPage", "Pager")
+                    </li>
+                    <li>
                         @Html.ActionLink("Pager pages to display", "PagesToDisplay", "Pager")
                     </li>
                     <li>
