Consistency between fifth and sixth versions
- Fixed minor inconsistencies between MVC5 and MVC6 grid documentations.

--- a/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
@@ -42,7 +42,7 @@
 {
     <span class="com">// Only grid string query values will be visible here.</span>
     <span class="kwd">return</span> PartialView(<span class="str">"_IndexGrid"</span>,
-        PeopleRepository.GetPeople());
+        <span class="cls">PeopleRepository</span>.GetPeople());
 }
 </code>
 </pre>
