--- a/src/Mvc.Grid.Web/Views/Grid/RowStyling.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowStyling.cshtml
@@ -87,7 +87,7 @@
 <code>
 &lt;style&gt;
     .bolded {
-        font-weight: <span class="kwd">bold</span>;
+        font-weight: bold;
     }
 &lt;/style&gt;
 </code>
