--- a/src/Mvc.Grid.Web/Views/Home/Index.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
 [<span class="cls">HttpGet</span>]
 <span class="kwd">public</span> <span class="cls">ActionResult</span> Index()
 {
-    <span class="kwd">return</span> View(PeopleRepository.GetPeople());
+    <span class="kwd">return</span> View(<span class="cls">PeopleRepository</span>.GetPeople());
 }
 </code>
 </pre>
