--- a/src/Mvc.Grid.Web/Views/Grid/Partial.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Partial.cshtml
@@ -49,7 +49,7 @@
 [<span class="cls">HttpGet</span>]
 <span class="kwd">public</span> <span class="cls">ActionResult</span> Index()
 {
-    <span class="kwd">return</span> View(PeopleRepository.GetPeople());
+    <span class="kwd">return</span> View(<span class="cls">PeopleRepository</span>.GetPeople());
 }
 </code>
 </pre>
@@ -75,7 +75,7 @@
 @@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
 
 @@(Html
-    .Grid(<span class="str">"_NestedPersonGrid"</span>Model)
+    .Grid(<span class="str">"_NestedPersonGrid"</span>, Model)
     .Build(columns =>
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
@@ -111,7 +111,7 @@
 
 @@model IGrid&lt;PersonModel&gt;
 
-&lt;div class="mvc-grid" data-name="@@Model.Name"&gt;
+&lt;div id="@@Model.Name" class="mvc-grid"&gt;
     &lt;table class="table @@Model.CssClasses"&gt;
         &lt;thead&gt;
             &lt;tr&gt;
@@ -161,7 +161,7 @@
                         }
                     &lt;/tr&gt;
 
-                    @@for (int i = 0; i &lt; row.Model.Children.Count; i++)
+                    for (int i = 0; i &lt; row.Model.Children.Count; i++)
                     {
                         GridRow&lt;PersonModel&gt; child = new GridRow&lt;PersonModel&gt;(row.Model.Children[i]);
                         &lt;tr class="row-child"&gt;
