--- a/src/Mvc.Grid.Web/Views/Pager/RowsPerPage.cshtml
+++ b/src/Mvc.Grid.Web/Views/Pager/RowsPerPage.cshtml
@@ -34,16 +34,42 @@
     </div>
 </div>
 
-<div class="example-code content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <i class="fa fa-code"></i>
-            View
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+<div class="row">
+    <div class="col-md-6">
+        <div class="example-code content-block">
+            <div class="widget">
+                <div class="widget-header">
+                    <i class="fa fa-code"></i>
+                    Controller
+                    <span class="widget-buttons">
+                        <i class="content-toggle"></i>
+                    </span>
+                </div>
+                <div class="widget-content">
+<pre>
+<code>
+[<span class="cls">HttpGet</span>]
+<span class="kwd">public</span> <span class="cls">ActionResult</span> Index()
+{
+    <span class="kwd">return</span> View(<span class="cls">PeopleRepository</span>.GetPeople()); <span class="com">// Has to be ordered in database query scenarios</span>
+}
+</code>
+</pre>
+                </div>
+            </div>
         </div>
-        <div class="widget-content">
+    </div>
+    <div class="col-md-6">
+        <div class="example-code content-block">
+            <div class="widget">
+                <div class="widget-header">
+                    <i class="fa fa-code"></i>
+                    View
+                    <span class="widget-buttons">
+                        <i class="content-toggle"></i>
+                    </span>
+                </div>
+                <div class="widget-content">
 <pre>
 <code>
 @@using NonFactors.Mvc.Grid;
@@ -68,6 +94,8 @@
 )
 </code>
 </pre>
+                </div>
+            </div>
         </div>
     </div>
 </div>
