Grid row button example
- Added grid row button example.

--- a/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
+++ b/src/Mvc.Grid.Web/wwwroot/Content/Shared/base.css
@@ -111,6 +111,10 @@ body {
     margin: 0;
 }
 
+    .action {
+        width: 1px;
+    }
+
     .table thead {
         background: rgba(255, 255, 255, 0.5);
         border: 0 none;
