--- a/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Multiple grids";
+    ViewBag.Title = "MVC.Grid multiple grids on one page";
 }
 
 <div class="row">
@@ -9,11 +9,13 @@
         <div class="example content-block">
             <div class="widget">
                 <div class="widget-header">
-                    <i class="fa fa-bars"></i>
-                    First grid
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        Multiple grids on one page
+                        <span class="widget-buttons">
+                            <i class="content-toggle"></i>
+                        </span>
+                    </h1>
                 </div>
                 <div class="widget-content">
                     @(Html
@@ -38,11 +40,13 @@
         <div class="example content-block">
             <div class="widget">
                 <div class="widget-header">
-                    <i class="fa fa-bars"></i>
-                    Second grid
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        Multiple grids on one page
+                        <span class="widget-buttons">
+                            <i class="content-toggle"></i>
+                        </span>
+                    </h1>
                 </div>
                 <div class="widget-content">
                     @(Html
