--- a/src/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Processing grid rows";
+    ViewBag.Title = "MVC.Grid row processing";
 }
 
 <div class="row">
@@ -11,11 +11,13 @@
         <div class="example content-block">
             <div class="widget">
                 <div class="widget-header">
-                    <i class="fa fa-bars"></i>
-                    Pre-processed grid
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        Pre-processing grid rows
+                        <span class="widget-buttons">
+                            <i class="content-toggle"></i>
+                        </span>
+                    </h1>
                 </div>
                 <div class="widget-content">
                     @(Html
@@ -39,11 +41,13 @@
         <div class="example content-block">
             <div class="widget">
                 <div class="widget-header">
-                    <i class="fa fa-bars"></i>
-                    Post-processed grid
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        Post-processing grid rows
+                        <span class="widget-buttons">
+                            <i class="content-toggle"></i>
+                        </span>
+                    </h1>
                 </div>
                 <div class="widget-content">
                     @(Html
