--- a/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
+++ b/src/Mvc.Grid.Web/Views/Home/Installation.cshtml
@@ -5,11 +5,13 @@
 <div class="docs content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Installation
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Installation steps
+                <span class="widget-buttons">
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             <p>
