--- a/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Binding row clicked event";
+    ViewBag.Title = "MVC.Grid row clicked event binding";
 }
 
 <div class="row">
@@ -9,11 +9,13 @@
         <div class="example content-block">
             <div class="widget">
                 <div class="widget-header">
-                    <i class="fa fa-bars"></i>
-                    Selectable grid
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        Binding row clicked event
+                        <span class="widget-buttons">
+                            <i class="content-toggle"></i>
+                        </span>
+                    </h1>
                 </div>
                 <div class="widget-content">
                     @(Html
