--- a/src/Mvc.Grid.Web/Views/Column/MultiFiltering.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/MultiFiltering.cshtml
@@ -1,17 +1,19 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Column multi filtering";
+    ViewBag.Title = "MVC.Grid column multi value filtering";
 }
 
 <div class="example content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Grid
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Filtering multiple column values
+                <span class="widget-buttons">
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             @(Html
