--- a/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Ajax.cshtml
@@ -1,15 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Ajax grid";
+    ViewBag.Title = "MVC.Grid ajax";
 }
 
 <div class="example content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Ajax grid
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Ajax grid
+                <span class="widget-buttons">
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             @Html.AjaxGrid(Url.Action("GridPartial", new { param = "value" }))
