--- a/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/GlobalSearch.cshtml
@@ -1,16 +1,18 @@
 ﻿@{
-    ViewBag.Title = "Grid global search";
+    ViewBag.Title = "MVC.Grid global search";
 }
 
 <div class="example content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Grid with global search
-            <input id="grid-search" class="grid-search" type="text" placeholder="Search..." />
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Global grid searching
+                <input id="grid-search" class="grid-search" type="text" placeholder="Search..." />
+                <span class="widget-buttons">
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             @Html.AjaxGrid(Url.Action("GridSearchPartial"))
