--- a/src/Mvc.Grid.Web/Views/Grid/RowStyling.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowStyling.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Grid row styling";
+    ViewBag.Title = "MVC.Grid row styling";
 }
 
 <style>
@@ -13,11 +13,13 @@
 <div class="example content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Bolded workers grid
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Styling grid rows
+                <span class="widget-buttons">
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             @(Html
