--- a/src/Mvc.Grid.Web/Views/Javascript/Reload.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/Reload.cshtml
@@ -1,18 +1,20 @@
 ﻿@model IEnumerable<PersonModel>
 
 @{
-    ViewBag.Title = "Reloading ajax grid";
+    ViewBag.Title = "MVC.Grid reloading";
 }
 
 <div class="example content-block">
     <div class="widget">
         <div class="widget-header">
-            <i class="fa fa-bars"></i>
-            Ajax grid
-            <span class="widget-buttons">
-                <i class="content-refresh fa fa-refresh"></i>
-                <i class="content-toggle"></i>
-            </span>
+            <h1>
+                <i class="fa fa-bars"></i>
+                Reloading grid
+                <span class="widget-buttons">
+                    <i class="content-refresh fa fa-refresh"></i>
+                    <i class="content-toggle"></i>
+                </span>
+            </h1>
         </div>
         <div class="widget-content">
             @Html.AjaxGrid(Url.Action("ReloadGrid"))
